--- a/topic1.html
+++ b/topic1.html
@@ -20,7 +20,6 @@
             </ul>
         </nav>
     </header>
-    
 
     <!-- Main Content -->
     <main>
@@ -77,6 +76,33 @@
                     </tr>
                 </tbody>
             </table>
+        </section>
+
+        <!-- Main Content -->
+        <section>
+            <h2>APIs Introduced with HTML5</h2>
+            <p>HTML5 didn't just bring new tags — it also introduced powerful JavaScript APIs that changed what web apps can do:</p>
+            <ul>
+                <li><strong>Canvas API:</strong> Lets you draw graphics and animations directly in the browser.</li>
+                <li><strong>Geolocation API:</strong> Allows access to the user's location (with permission).</li>
+                <li><strong>Web Storage:</strong> Gives you persistent data options like <code>localStorage</code> and <code>sessionStorage</code>.</li>
+                <li><strong>Drag and Drop API:</strong> Enables native drag-and-drop functionality.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Semantic Structure and Accessibility</h2>
+            <p>HTML5 emphasizes semantic tags, which improves not just organization and SEO, but also accessibility. Screen readers can better interpret elements like <code>&lt;nav&gt;</code> or <code>&lt;main&gt;</code>, giving users with disabilities a more consistent browsing experience.</p>
+        </section>
+
+        <section>
+            <h2>Real-World Impact</h2>
+            <p>Thanks to HTML5, websites like YouTube no longer require Flash to play videos. Mobile-first design became standard because HTML5 works smoothly across all devices. It's also become the backbone of Progressive Web Apps (PWAs) — letting apps behave more like native apps even when offline.</p>
+        </section>
+
+        <section>
+            <h2>Conclusion</h2>
+            <p>HTML5 isn't just an upgrade — it's the solid foundation of modern web development. Whether you're creating a simple blog or a complex single-page app, HTML5 gives you the tools to build something fast, accessible, and future-ready.</p>
         </section>
     </main>
 
